# embed-ani-gamer-covers

./: README.md  changelog.md  downloads_count.py  embed-ani-gamer-covers.py  embed_cover.py  get_metadata.py  pyproject.toml  r.txt
embed-ani-gamer-covers/: __main__.py  get_metadata.py
