[tool.poetry]
name = "embed-ani-gamer-covers"
version = "0.3.0"
description = ""
authors = ["zica"]
readme = "README.md"
repository = "https://github.com/zica87/embed-ani-gamer-covers"
packages = [{include = "embed-ani-gamer-covers"}]

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.45.1"
questionary = "^1.10.0"
tomli-w = "^1.0.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
